--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,98 +1,98 @@
-name: CI
+# name: CI
 
-on:
-  pull_request:
-  push:
-    branches: [ main ]
+# on:
+#   pull_request:
+#   push:
+#     branches: [ main ]
 
-jobs:
-  scan_ruby:
-    runs-on: ubuntu-latest
+# jobs:
+#   scan_ruby:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: true
+#       - name: Set up Ruby
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: .ruby-version
+#           bundler-cache: true
 
-      - name: Scan for common Rails security vulnerabilities using static analysis
-        run: bin/brakeman --no-pager
+#       - name: Scan for common Rails security vulnerabilities using static analysis
+#         run: bin/brakeman --no-pager
 
-  scan_js:
-    runs-on: ubuntu-latest
+#   scan_js:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: true
+#       - name: Set up Ruby
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: .ruby-version
+#           bundler-cache: true
 
-      - name: Scan for security vulnerabilities in JavaScript dependencies
-        run: bin/importmap audit
+#       - name: Scan for security vulnerabilities in JavaScript dependencies
+#         run: bin/importmap audit
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+#   lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: true
+#       - name: Set up Ruby
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: .ruby-version
+#           bundler-cache: true
 
-      - name: Auto-correct code with RuboCop
-        run: bin/rubocop -A
+#       - name: Auto-correct code with RuboCop
+#         run: bin/rubocop -A
 
-      - name: Check for lint errors after autocorrect
-        run: bin/rubocop -f github
+#       - name: Check for lint errors after autocorrect
+#         run: bin/rubocop -f github
 
-      - name: Commit and push lint fixes if any
-        run: |
-          if git diff --quiet; then
-            echo "No changes to commit."
-          else
-            git config user.name "github-actions"
-            git config user.email "github-actions@github.com"
-            git commit -am "style: Auto-correct RuboCop offenses"
-            git push
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Commit and push lint fixes if any
+#         run: |
+#           if git diff --quiet; then
+#             echo "No changes to commit."
+#           else
+#             git config user.name "github-actions"
+#             git config user.email "github-actions@github.com"
+#             git commit -am "style: Auto-correct RuboCop offenses"
+#             git push
+#           fi
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install packages
-        run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git libyaml-dev pkg-config google-chrome-stable
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Install packages
+#         run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git libyaml-dev pkg-config google-chrome-stable
 
-      - name: Checkout code
-        uses: actions/checkout@v4
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: true
+#       - name: Set up Ruby
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: .ruby-version
+#           bundler-cache: true
 
-      - name: Run tests
-        env:
-          RAILS_ENV: test
-        run: bin/rails db:test:prepare test test:system
+#       - name: Run tests
+#         env:
+#           RAILS_ENV: test
+#         run: bin/rails db:test:prepare test test:system
 
-      - name: Keep screenshots from failed system tests
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: screenshots
-          path: ${{ github.workspace }}/tmp/screenshots
-          if-no-files-found: ignore
+#       - name: Keep screenshots from failed system tests
+#         uses: actions/upload-artifact@v4
+#         if: failure()
+#         with:
+#           name: screenshots
+#           path: ${{ github.workspace }}/tmp/screenshots
+#           if-no-files-found: ignore
