--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Chrome とバージョン一致する ChromeDriver をインストール
       - name: Install Chrome and matching ChromeDriver
         run: |
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable unzip curl
+          sudo apt-get install -y google-chrome-stable unzip curl xvfb
           CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
           DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_${CHROME_VERSION}")
           curl -Lo /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
           sudo unzip /tmp/chromedriver.zip -d /usr/local/bin
           sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver
           sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+          chromedriver --version
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -46,5 +46,8 @@ jobs:
           echo "SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}" >> .env
           echo "FROM_MAIL_ADDRESS=${{ secrets.FROM_MAIL_ADDRESS }}" >> .env
 
-      - name: Run RSpec tests
-        run: bundle exec rspec
+      - name: Run RSpec tests with Xvfb
+        run: |
+          Xvfb :99 -screen 0 1920x1080x24 & 
+          export DISPLAY=:99
+          bundle exec rspec
