--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,11 @@ jobs:
           echo "SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}" >> .env
           echo "FROM_MAIL_ADDRESS=${{ secrets.FROM_MAIL_ADDRESS }}" >> .env
 
+      - name: Precompile assets for test
+        run: bundle exec rails assets:precompile
+
       - name: Run RSpec tests with Xvfb
         run: |
-          Xvfb :99 -screen 0 1920x1080x24 & 
+          Xvfb :99 -screen 0 1920x1080x24 &
           export DISPLAY=:99
           bundle exec rspec
