--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,31 +6,9 @@ on:
   pull_request:
     branches: [ main, development ]
 
-# 共通ステップのアンカーを定義（jobsの外）
 defaults:
   run:
     shell: bash
-
-# アンカーはYAML配列の形で定義
-setup_common: &setup_common
-  - uses: actions/checkout@v4
-  - uses: ruby/setup-ruby@v1
-    with:
-      ruby-version: '3.2.3'
-      bundler-cache: true
-  - name: Install Chrome and matching ChromeDriver
-    run: |
-      sudo apt-get update
-      sudo apt-get install -y google-chrome-stable unzip curl xvfb
-      CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-      DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_${CHROME_VERSION}")
-      curl -Lo /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
-      sudo unzip /tmp/chromedriver.zip -d /usr/local/bin
-      sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver
-      sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
-      chromedriver --version
-  - run: bundle install --jobs 4 --retry 3
-  - run: bundle exec rails assets:precompile
 
 jobs:
   Linter_Rubocop_test:
@@ -48,7 +26,28 @@ jobs:
     env:
       RAILS_ENV: test
     needs: Linter_Rubocop_test
-   steps: *setup_common 
+    steps:
+      # 共通セットアップ開始
+      - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2.3'
+          bundler-cache: true
+      - name: Install Chrome and matching ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable unzip curl xvfb
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_${CHROME_VERSION}")
+          curl -Lo /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+          sudo unzip /tmp/chromedriver.zip -d /usr/local/bin
+          sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver
+          sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+          chromedriver --version
+      - run: bundle install --jobs 4 --retry 3
+      - run: bundle exec rails assets:precompile
+      # 共通セットアップ終了
+
       - name: Run UI spec
         run: |
           Xvfb :99 -screen 0 1920x1080x24 &
@@ -60,7 +59,28 @@ jobs:
     env:
       RAILS_ENV: test
     needs: Linter_Rubocop_test
-    steps: *setup_common
+    steps:
+      # 共通セットアップ開始
+      - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2.3'
+          bundler-cache: true
+      - name: Install Chrome and matching ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable unzip curl xvfb
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_${CHROME_VERSION}")
+          curl -Lo /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+          sudo unzip /tmp/chromedriver.zip -d /usr/local/bin
+          sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver
+          sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+          chromedriver --version
+      - run: bundle install --jobs 4 --retry 3
+      - run: bundle exec rails assets:precompile
+      # 共通セットアップ終了
+
       - name: Run System spec (exclude UI)
         run: |
           Xvfb :99 -screen 0 1920x1080x24 &
@@ -75,12 +95,34 @@ jobs:
       SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
       FROM_MAIL_ADDRESS: ${{ secrets.FROM_MAIL_ADDRESS }}
     needs: Linter_Rubocop_test
-    steps: *setup_common
+    steps:
+      # 共通セットアップ開始
+      - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2.3'
+          bundler-cache: true
+      - name: Install Chrome and matching ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable unzip curl xvfb
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_${CHROME_VERSION}")
+          curl -Lo /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+          sudo unzip /tmp/chromedriver.zip -d /usr/local/bin
+          sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver
+          sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+          chromedriver --version
+      - run: bundle install --jobs 4 --retry 3
+      - run: bundle exec rails assets:precompile
+      # 共通セットアップ終了
+
       - name: Create .env file with secrets
         run: |
           echo "MY_MAIL_ADDRESS=${{ secrets.MY_MAIL_ADDRESS }}" >> .env
           echo "SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}" >> .env
           echo "FROM_MAIL_ADDRESS=${{ secrets.FROM_MAIL_ADDRESS }}" >> .env
+
       - name: Run All RSpec
         run: |
           Xvfb :99 -screen 0 1920x1080x24 &
@@ -95,11 +137,33 @@ jobs:
       SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
       FROM_MAIL_ADDRESS: ${{ secrets.FROM_MAIL_ADDRESS }}
     needs: Linter_Rubocop_test
-    steps: *setup_common
+    steps:
+      # 共通セットアップ開始
+      - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2.3'
+          bundler-cache: true
+      - name: Install Chrome and matching ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable unzip curl xvfb
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_${CHROME_VERSION}")
+          curl -Lo /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/${DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+          sudo unzip /tmp/chromedriver.zip -d /usr/local/bin
+          sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver
+          sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+          chromedriver --version
+      - run: bundle install --jobs 4 --retry 3
+      - run: bundle exec rails assets:precompile
+      # 共通セットアップ終了
+
       - name: Create .env file with secrets
         run: |
           echo "MY_MAIL_ADDRESS=${{ secrets.MY_MAIL_ADDRESS }}" >> .env
           echo "SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}" >> .env
           echo "FROM_MAIL_ADDRESS=${{ secrets.FROM_MAIL_ADDRESS }}" >> .env
+
       - name: Run ContactMailer spec
         run: bundle exec rspec spec/mailers/contact_mailer_spec.rb
