--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,8 @@
 # # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # # Layout/SpaceInsideArrayLiteralBrackets:
 # #   Enabled: false
-require:
+
+plugins:
   - rubocop-rails
   - rubocop-rspec
 
