--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,6 +125,9 @@ jobs:
           ruby-version: '3.2.6'
           bundler-cache: true
 
+      - name: Install Ruby gems
+        run: bundle install --jobs 4 --retry 3
+
       - name: Node.js & Playwrightセットアップ
         uses: actions/setup-node@v4
         with:
